# local-llm-chatbot

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-build.yml
.streamlit/: config.toml
src/: app.py  chat_engine.py  config.py  conversation_manager.py  model_manager.py  utils.py
tests/: conftest.py  test_chat_engine.py  test_conversation_manager.py  test_model_manager.py
