[project]
name = "local-llm-chatbot"
version = "0.1.0"
description = "A privacy-first AI chatbot running entirely on your local machine with open-source LLMs"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Ranush Vimantha" }
]

dependencies = [
    "langchain>=0.2.0",
    "langchain-ollama>=0.1.0",
    "streamlit>=1.35.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
